@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.344 2015/01/05 22:17:05 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.345 2015/01/08 05:10:07 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -3139,6 +3139,16 @@ eval_plots()
 					xhigh, dmy_type, x_axis,
 					this_plot->noautoscale, NOOP, NOOP );
 			    }
+
+			    if (this_plot->plot_style == FILLEDCURVES) {
+				this_plot->points[i].xhigh = this_plot->points[i].x;
+				STORE_WITH_LOG_AND_UPDATE_RANGE(
+				    this_plot->points[i].yhigh,
+				    this_plot->filledcurves_options.at,
+				    this_plot->points[i].type, y_axis,
+				    this_plot->noautoscale, NOOP, NOOP);
+			    }
+			    
 			    /* Fill in additional fields needed to draw a circle */
 #ifdef EAM_OBJECTS
 			    if (this_plot->plot_style == CIRCLES) {
